--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        hello my name is dinesh
+        hello my name is dinesh. Iam  a student at MUN
 
         
     </body>
