--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <div class="Primary bar">
             <div class="middle bar">
+                <img id = "mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Menu bar "> 
+                 <!-- mobile-cta is used when we write JS  -->
                  <nav>
+                     <img id ="mobile-close"  class="close-button" src="images/exit.svg" alt="exit-button">
                      <ul class="left-nav">
                         <li class="Colour1"><a href="#">Home</a></li>
                         <li class="colour2"> <a href="#">About</a></li>
@@ -23,6 +26,14 @@
                  </nav>
             </div>
         </div>
+        <section class="hero">
+            <div class="container">
+                <div class="left-col">
+                    <img src="images/linkdin-image.svg" alt="photo">
+                </div>
+            </div>
+
+        </section>
 
          
     </body>
