html almost done

--- a/index.html
+++ b/index.html
@@ -29,10 +29,84 @@
         <section class="hero">
             <div class="container">
                 <div class="left-col">
-                    <img src="images/linkdin-image.svg" alt="photo">
-                </div>
-            </div>
+                    <h1 class = "name">Hello, I am Dinesh</h1>
+                    <p class = "description">I am currently a student at 
+                        <a href="https://www.mun.ca/" class = "MUN"> Memorial University of Newfoundland</a> <br>pursuing the Bachelor of Science degree and<br> 
+                    doing a Major in the Computer Science Field<br> and a Minor in Maths.</p>
 
+                    <a href="#" class = " About me">Learn More About Me</a>
+
+                    
+
+
+
+                </div>
+            </div> 
+
+        </section>
+        <section class = "About me">
+            <div class="container">
+                <h1 class = "Innovative">I strive to be Innovative</h1>
+                <p class = "more about me"> more about me would be written here</p>
+
+            </div>
+        </section>
+
+
+        <section>
+            <div class="container">
+                <h1>Work and Peronsal Projects</h1>
+            </div>
+        </section>
+
+        <section class = "Work 1">
+            <div class="container">
+                <img src="images/leadsoc.jpg" alt="intern">
+                <p>I have completed an internship at LeadSoc Technology.<br>
+                    Whilst my time in LEADSOC I have learned about topics like automation using a scripting language like Python.<br>
+                    I was allowed to work in a technical lab where learned all the intricacies of python.</p>
+
+            </div>
+        </section>
+        <section class = "Work 2">
+            <div class="container">
+                <img src="images/malefiz.jpg" alt="malefiz">
+                <p>Developed multiplayer <a href="https://github.com/bpynn/comp2005-fall20-group3">Malefiz Game</a> using JAVA. 
+                    <br>Worked in a group and got the individual tasks done. 
+                    <br>Utilized data structures to write program for computer player and provided option for future networking to be able to play online</p>
+
+            </div>
+        </section>
+
+        <section class = "Contact">
+            <div class="container">
+                <div class="contact-left">
+                    <h2>Contatc</h2>
+                    <form>
+                        <label for="name">Name </label>
+                        <input type="text" id = "name" name = "name" placeholder="Your Name"> 
+                        <br>
+                        <br>
+                        <br>
+
+                        <label for="email">Email </label>
+                        <input type="email " id = "email" name = "email" placeholder="You E-mail"> 
+                        <br>
+                        <br>
+                        <br>
+
+                        <label for="message"> Message </label>
+                        <br>
+                        <textarea name="message" id="message " cols="30" rows="10"> </textarea>
+
+                        <br>
+                        <input type="submit" class="submit"  value="Send Message">
+
+
+
+                    </form>
+                </div>
+            </div> 
         </section>
 
          
