--- a/html/contact.html
+++ b/html/contact.html
@@ -9,10 +9,10 @@
 <body>
     <div class="Primary bar">
         <div class="middle bar">
-            <img id = "mobile-cta" class="mobile-menu" src="images/menu.svg" alt="Menu bar "> 
+            <img id = "mobile-cta" class="mobile-menu" src="//images/menu.svg" alt="Menu bar "> 
              <!-- mobile-cta is used when we write JS  -->
              <nav>
-                 <img id ="mobile-close"  class="close-button" src="images/exit.svg" alt="exit-button">
+                 <img id ="mobile-close"  class="close-button" src="..images/exit.svg" alt="exit-button">
                  <ul class="left-nav">
                     <li class="Colour1"><a href="index.html">Home</a></li>
                     <li class="colour2"> <a href="aboutme.html">About</a></li>
@@ -29,7 +29,9 @@
     <section class = "Contact">
         <div class="container">
             <div class="contact-left">
-                <h2>Contact</h2>
+                <h1>Lets Chat</h1>
+                <p>Get in touch with the form below or by E-mail <a href="http://vaishdin816@gmail.com/">vaishdin816@gmail.com</a>.</p>
+
                 <form>
                     <label for="name">Name </label>
                     <input type="text" id = "name" name = "name" placeholder="Your Name"> 
