--- a/html/contact.html
+++ b/html/contact.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <div class="Primary bar">
         <div class="middle bar">
-            <img id = "mobile-cta" class="mobile-menu" src="//images/menu.svg" alt="Menu bar "> 
+            <img id = "mobile-cta" class="mobile-menu" src="../images/menu.svg" alt="Menu bar "> 
              <!-- mobile-cta is used when we write JS  -->
              <nav>
-                 <img id ="mobile-close"  class="close-button" src="..images/exit.svg" alt="exit-button">
+                 <img id ="mobile-close"  class="close-button" src="../images/exit.svg" alt="exit-button">
                  <ul class="left-nav">
                     <li class="Colour1"><a href="index.html">Home</a></li>
                     <li class="colour2"> <a href="aboutme.html">About</a></li>
