--- a/html/work.html
+++ b/html/work.html
@@ -6,26 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
-    <div class="Primary bar">
-        <div class="middle bar">
-            <img id = "mobile-cta" class="mobile-menu" src="../images/menu.svg" alt="Menu bar "> 
-             <!-- mobile-cta is used when we write JS  -->
-             <nav>
-                 <img id ="mobile-close"  class="close-button" src="../images/exit.svg" alt="exit-button">
-                 <ul class="left-nav">
-                    <li class="Colour1"><a href="index.html">Home</a></li>
-                    <li class="colour2"> <a href="aboutme.html">About</a></li>
-                    <li class="colour3"><a href="work.html">Work</a></li>
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class = "logo"> Dinesh Bandreddi</label>
+            <ul class="left-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li> <a href="aboutme.html">About</a></li>
+                <li> <a href="work.html">Work</a></li>
+                <li> <a href="mailto:dkbandreddi@mun.ca">Contact</a></li>
                     
-                </ul>
-                <ul class="right nav">
-                    <li class="Colour4"><a href="contact.html">Contact</a></li>
-                </ul>
-             </nav>
-        </div>
-    </div>
+            </ul>
+     </nav>
     <section>
         <div class="container">
             <h1>Work and Peronsal Projects</h1>
