--- a/html/work.html
+++ b/html/work.html
@@ -33,8 +33,8 @@
             <img src="../images/leadsoc.jpg" alt="intern">
             <p>I have completed an internship at LeadSoc Technology.<br>
                 Whilst my time in LEADSOC I have learned about topics like automation using a scripting language like Python.<br>
-                I was allowed to work in a technical lab where I learned all the intricacies of python.</p>
-                <a href="http://leadsoc.com/"> Learn More</a>
+                I was allowed to work in a technical lab where I learned all the intricacies of python.<br>
+                <br> <a class  = "learn" href="http://leadsoc.com/"> Learn More</a></p>
 
         </div>
     
